--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2c0485ca",
    "metadata": {},
    "outputs": [
@@ -20,10 +20,7 @@
    "source": [
     "from langchain_openai import ChatOpenAI\n",
     "\n",
-    "chat = ChatOpenAI(model_name=\"gpt-4.1-nano\")\n",
-    "\n",
-    "b = chat.predict(\"대구소프트웨어마이스터고등학교에 대해 알고 있어?\")\n",
-    "b"
+    "chat = ChatOpenAI(model_name=\"gpt-4.1-nano\", temperature=0.1)"
    ]
   },
   {
@@ -31,8 +28,29 @@
    "execution_count": null,
    "id": "05ac7d62",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='멕시코와 태국 사리(방콕)의 거리는 대략적으로 약 13,000km에서 14,000km 정도입니다. 정확한 거리는 출발지와 도착지의 구체적인 위치에 따라 다를 수 있습니다.  \\n제 이름은 채근영입니다!', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 66, 'prompt_tokens': 70, 'total_tokens': 136, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4.1-nano-2025-04-14', 'system_fingerprint': 'fp_e91a518ddb', 'id': 'chatcmpl-C4pzYzK7hmulQR2krua5EJ3RBebDp', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None}, id='run--2271ad5f-a25f-4b0a-9f85-1cd85967f237-0', usage_metadata={'input_tokens': 70, 'output_tokens': 66, 'total_tokens': 136, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain.schema import HumanMessage, AIMessage, SystemMessage\n",
+    "\n",
+    "messages = [\n",
+    "  SystemMessage(content=\"당신은 지리 전문가입니다. 그리고 당신은 오직 한국어로만 답변합니다.\"),\n",
+    "  AIMessage(content=\"내 이름은 채근영이야!\"),\n",
+    "  HumanMessage(content=\"멕시코와 태국 사리의 거리는 어떻게 되나요? 그리고 당신의 이름은 무엇인가요?\")\n",
+    "]\n",
+    "\n",
+    "chat.predict_messages(messages)\n"
+   ]
   }
  ],
  "metadata": {
