--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,14 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2c0485ca",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/_j/j5z1t67s403bjnzwvm9675940000gn/T/ipykernel_97742/1587958287.py:11: LangChainDeprecationWarning: The method `BaseChatModel.predict` was deprecated in langchain-core 0.1.7 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
+      "  chat.predict(prompt)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'네, 대구소프트웨어마이스터고등학교는 대한민국 대구광역시에 위치한 소프트웨어 분야 전문 고등학교입니다. 이 학교는 소프트웨어 개발, 정보기술(IT), 프로그래밍 등 관련 분야에 특화된 교육 과정을 운영하고 있어 학생들이 실무에 필요한 기술과 능력을 갖출 수 있도록 지원하고 있습니다. 또한, 산업체와의 협력, 실습 중심의 교육, 창의적 문제 해결 능력 배양 등을 통해 IT 및 소프트웨어 산업의 인재를 양성하는 데 주력하고 있습니다. 혹시 더 구체적인 정보나 관련 내용이 필요하시면 말씀해 주세요!'"
+       "'멕시코와 서울 사이의 거리는 대략적으로 약 11,000에서 12,000킬로미터(약 6,800에서 7,500마일) 정도입니다. 이는 직선 거리(항공 거리) 기준이며, 실제 비행 경로나 이동 방법에 따라 차이가 있을 수 있습니다.'"
       ]
      },
      "execution_count": 2,
@@ -19,37 +27,55 @@
    ],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
+    "from langchain.prompts import PromptTemplate, ChatPromptTemplate\n",
     "\n",
-    "chat = ChatOpenAI(model_name=\"gpt-4.1-nano\", temperature=0.1)"
+    "chat = ChatOpenAI(model_name=\"gpt-4.1-nano\", temperature=0.1)\n",
+    "\n",
+    "template = PromptTemplate.from_template(\n",
+    "    \"{country_a}와 {country_b} 사이의 거리는 어떻게 되나요?\"\n",
+    ")\n",
+    "prompt = template.format(country_a=\"멕시코\", country_b=\"서울\")\n",
+    "\n",
+    "chat.predict(prompt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "05ac7d62",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='멕시코와 태국 사리(방콕)의 거리는 대략적으로 약 13,000km에서 14,000km 정도입니다. 정확한 거리는 출발지와 도착지의 구체적인 위치에 따라 다를 수 있습니다.  \\n제 이름은 채근영입니다!', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 66, 'prompt_tokens': 70, 'total_tokens': 136, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4.1-nano-2025-04-14', 'system_fingerprint': 'fp_e91a518ddb', 'id': 'chatcmpl-C4pzYzK7hmulQR2krua5EJ3RBebDp', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None}, id='run--2271ad5f-a25f-4b0a-9f85-1cd85967f237-0', usage_metadata={'input_tokens': 70, 'output_tokens': 66, 'total_tokens': 136, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
+       "AIMessage(content='한국과 일본 사이의 거리는 약 1,200에서 1,300킬로미터 정도입니다. 이는 두 나라의 가장 가까운 해상 거리로, 일본의 오키나와와 한국의 부산 간 거리를 기준으로 합니다. \\n\\n제 이름은 채근영입니다.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 62, 'prompt_tokens': 64, 'total_tokens': 126, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4.1-nano-2025-04-14', 'system_fingerprint': 'fp_e91a518ddb', 'id': 'chatcmpl-C4qQVOiwqCO3mwk1GMmAGYzFw94w3', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None}, id='run--7c35a3ce-3ad7-498d-a05f-ad16bcb10391-0', usage_metadata={'input_tokens': 64, 'output_tokens': 62, 'total_tokens': 126, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from langchain.schema import HumanMessage, AIMessage, SystemMessage\n",
+    "template = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\n",
+    "            \"system\",\n",
+    "            \"당신은 지리 전문가입니다. 그리고 당신은 오직 {language}로만 답변합니다.\",\n",
+    "        ),\n",
+    "        (\"ai\", \"제 이름은 {name}입니다!\"),\n",
+    "        (\n",
+    "            \"human\",\n",
+    "            \"{country_a}와 {country_b} 사이의 거리는 어떻게 되나요? 그리고 당신의 이름은 무엇인가요?\",\n",
+    "        ),\n",
+    "    ]\n",
+    ")\n",
     "\n",
-    "messages = [\n",
-    "  SystemMessage(content=\"당신은 지리 전문가입니다. 그리고 당신은 오직 한국어로만 답변합니다.\"),\n",
-    "  AIMessage(content=\"내 이름은 채근영이야!\"),\n",
-    "  HumanMessage(content=\"멕시코와 태국 사리의 거리는 어떻게 되나요? 그리고 당신의 이름은 무엇인가요?\")\n",
-    "]\n",
+    "prompt = template.format_messages(\n",
+    "    language=\"한국어\", name=\"채근영\", country_a=\"한국\", country_b=\"일본\"\n",
+    ")\n",
     "\n",
-    "chat.predict_messages(messages)\n"
+    "chat.predict_messages(prompt)"
    ]
   }
  ],
