--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,20 +2,64 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "2c0485ca",
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
     "from langchain.prompts import ChatPromptTemplate\n",
+    "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
     "\n",
-    "chat = ChatOpenAI(model_name=\"gpt-4.1-nano\", temperature=0.1)"
+    "chat = ChatOpenAI(\n",
+    "    model_name=\"gpt-4.1-nano\",\n",
+    "    temperature=0.1,\n",
+    "    streaming=True,\n",
+    "    callbacks=[StreamingStdOutCallbackHandler()],\n",
+    ")\n",
+    "\n",
+    "chef_prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\n",
+    "            \"system\",\n",
+    "            \"You are a world-class chef international chef. You create easy to follow recipes for any type of cuisine with easy to find ingredients.\",\n",
+    "        ),\n",
+    "        (\"human\", \"I want to cook {cuisine} food.\"),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "chef_chain = chef_prompt | chat"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
+   "id": "5534161c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "veg_chef_prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\n",
+    "            \"system\",\n",
+    "            \"You are a vegetarian chef specialized on making traditional recipes vegetarian. You find alternative ingredients and explain their preparation. You don't radically modify the recipe. If there is no alternative for a food just say you don't know how to replace it. 한국어로 답변해\",\n",
+    "        ),\n",
+    "        (\"human\", \"{recipe}\"),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "veg_chain = veg_chef_prompt | chat\n",
+    "\n",
+    "final_chain = {\"recipe\": chef_chain} | veg_chain\n",
+    "\n",
+    "final_chain.invoke({\n",
+    "  \"cuisine\": \"Korean\"\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8321970a",
    "metadata": {},
    "outputs": [],
@@ -31,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "e32c6b8e",
    "metadata": {},
    "outputs": [],
@@ -45,32 +89,6 @@
     "        (\"human\", \"{question}\"),\n",
     "    ]\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "dfcc1fa9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['교육', '소프트웨어', '고등학교', '대구', '기술']"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "chain = template | chat | CommaOutputParser()\n",
-    "\n",
-    "chain.invoke({\n",
-    "  \"max_items\": 5,\n",
-    "  \"question\": \"대구소프트웨어마이스터고가 무엇인가요?\"\n",
-    "})"
    ]
   }
  ],
