--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -8,7 +8,8 @@
    "outputs": [],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
-    "from langchain.prompts import ChatPromptTemplate\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "from langchain.prompts.few_shot import FewShotPromptTemplate\n",
     "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
     "\n",
     "chat = ChatOpenAI(\n",
@@ -18,77 +19,53 @@
     "    callbacks=[StreamingStdOutCallbackHandler()],\n",
     ")\n",
     "\n",
-    "chef_prompt = ChatPromptTemplate.from_messages(\n",
-    "    [\n",
-    "        (\n",
-    "            \"system\",\n",
-    "            \"You are a world-class chef international chef. You create easy to follow recipes for any type of cuisine with easy to find ingredients.\",\n",
-    "        ),\n",
-    "        (\"human\", \"I want to cook {cuisine} food.\"),\n",
-    "    ]\n",
+    "examples = [\n",
+    "    {\n",
+    "        \"question\": \"프랑스에 대해 아는 것이 있나요?\",\n",
+    "        \"answer\": \"\"\"\n",
+    "제가 프랑스에 대해 아는 것입니다:\n",
+    "수도: 파리\n",
+    "언어: 프랑스어\n",
+    "음식: 와인과 치즈\n",
+    "통화: 유로\n",
+    "\"\"\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"question\": \"이탈리아에 대해 아는 것이 있나요?\",\n",
+    "        \"answer\": \"\"\"\n",
+    "제가 이탈리아에 대해 아는 것입니다:\n",
+    "수도: 로마\n",
+    "언어: 이탈리아어\n",
+    "음식: 피자와 파스타\n",
+    "통화: 유로\n",
+    "\"\"\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"question\": \"그리스에 대해 아는 것이 있나요?\",\n",
+    "        \"answer\": \"\"\"\n",
+    "제가 그리스에 대해 아는 것입니다:\n",
+    "수도: 아테네\n",
+    "언어: 그리스어\n",
+    "음식: 수블라키와 페타 치즈\n",
+    "통화: 유로\n",
+    "\"\"\",\n",
+    "    },\n",
+    "]\n",
+    "\n",
+    "example_prompt = PromptTemplate.from_template(\"Human: {question}\\nAI: {answer}\")\n",
+    "\n",
+    "prompt = FewShotPromptTemplate(\n",
+    "    example_prompt=example_prompt,\n",
+    "    examples=examples,\n",
+    "    suffix=\"Human: {country}에 대해 아는 것이 있나요?\",\n",
+    "    input_variables=[\"country\"],\n",
     ")\n",
     "\n",
-    "chef_chain = chef_prompt | chat"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5534161c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "veg_chef_prompt = ChatPromptTemplate.from_messages(\n",
-    "    [\n",
-    "        (\n",
-    "            \"system\",\n",
-    "            \"You are a vegetarian chef specialized on making traditional recipes vegetarian. You find alternative ingredients and explain their preparation. You don't radically modify the recipe. If there is no alternative for a food just say you don't know how to replace it. 한국어로 답변해\",\n",
-    "        ),\n",
-    "        (\"human\", \"{recipe}\"),\n",
-    "    ]\n",
-    ")\n",
+    "chain = prompt | chat\n",
     "\n",
-    "veg_chain = veg_chef_prompt | chat\n",
-    "\n",
-    "final_chain = {\"recipe\": chef_chain} | veg_chain\n",
-    "\n",
-    "final_chain.invoke({\n",
-    "  \"cuisine\": \"Korean\"\n",
+    "chain.invoke({\n",
+    "    \"country\": \"노르웨이\"\n",
     "})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8321970a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain.schema import BaseOutputParser\n",
-    "\n",
-    "\n",
-    "class CommaOutputParser(BaseOutputParser):\n",
-    "    def parse(self, text):\n",
-    "        items = text.strip().split(\",\")\n",
-    "        return list(map(str.strip, items))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e32c6b8e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "template = ChatPromptTemplate.from_messages(\n",
-    "    [\n",
-    "        (\n",
-    "            \"system\",\n",
-    "            \"You are a list generating machine. Everything you are asked will be answered with a comma separated list of max {max_items} in lowercase.Do NOT reply with anything else, only reply Korean\",\n",
-    "        ),\n",
-    "        (\"human\", \"{question}\"),\n",
-    "    ]\n",
-    ")"
    ]
   }
  ],
